Fixed issue with long star rating names getting truncated.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -302,6 +302,9 @@ input[type="file"] {
 	padding: 5px;
 }
 
+.star_table tr td{
+	width: 200px;
+}
 
 .rating_star { float:left; clear:both; width:100%; height:auto; padding:0px; margin:0px; }
 .rating_star li{ float:left;list-style:none; }
